--- a/index.html
+++ b/index.html
@@ -13,5 +13,21 @@
 in multiple blockchain testnets, focusing on stability and performance
   </p>
 
+  <h2>Experience</h2>
+<ul>
+  <li>Initia – Validator (Testnet)</li>
+  <li>Dymension – Node Operator (Testnet)</li>
+  <li>Story Protocol Testnet Odyssey and Aenid</li>
+  <li>Warden Protocol</li>
+  <li>OG Labs</li>
+  <li>DILL Network</li>
+</ul>
+
+  <h2>Contact</h2>
+<p>
+  Telegram: @dhozil<br>
+  X : https://x.com/cobersky
+</p>
+  
 </body>
 </html>
