--- a/index.html
+++ b/index.html
@@ -3,6 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <title>Validator Portfolio</title>
+  <style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #0d1117;
+    color: #e6edf3;
+    max-width: 900px;
+    margin: auto;
+    padding: 40px;
+  }
+
+  .project {
+    display: flex;
+    gap: 20px;
+    background: #161b22;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+  }
+
+  .project img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .project a {
+    color: #58a6ff;
+    text-decoration: none;
+    margin-right: 10px;
+  }
+</style>
 </head>
 <body>
 
@@ -16,6 +46,23 @@ in multiple blockchain testnets, focusing on stability and performance
   <h2>Experience</h2>
 <ul>
   <li>Initia – Validator (Testnet)</li>
+  <h2>Projects</h2>
+
+<div class="project">
+  <img src="assets/initia.png" alt="Initia logo">
+  <div>
+    <h3>Initia</h3>
+    <p>
+      Participated as a validator in the Initia testnet, operating validator
+      infrastructure and monitoring network performance.
+    </p>
+    <p>
+      <a href="https://initia.xyz" target="_blank">Website</a>
+      <a href="https://x.com/initiaFDN" target="_blank">X</a>
+      <a href="https://discord.gg/initia" target="_blank">Discord</a>
+    </p>
+  </div>
+</div>
   <li>Dymension – Node Operator (Testnet)</li>
   <li>Story Protocol Testnet Odyssey and Aenid</li>
   <li>Warden Protocol</li>
