--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@ in multiple blockchain testnets, focusing on stability and performance
     </p>
     <p>
       <a href="https://initia.xyz" target="_blank">Website</a>
-      <a href="https://x.com/initiaFDN" target="_blank">X</a>
+      <a href="https://x.com/initia" target="_blank">X</a>
       <a href="https://discord.gg/initia" target="_blank">Discord</a>
     </p>
   </div>
 </div>
+  
   <li>Dymension – Node Operator (Testnet)</li>
   <li>Story Protocol Testnet Odyssey and Aenid</li>
   <li>Warden Protocol</li>
