--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Validator Portfolio</title>
+  <title>Validator Portfolio<title>
   <style>
   body {
     font-family: Arial, sans-serif;
@@ -13,25 +13,38 @@
     padding: 40px;
   }
 
-  .project {
-    display: flex;
-    gap: 20px;
-    background: #161b22;
-    padding: 20px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-  }
+  .projects-container {
+  display: flex;
+  gap: 25px;
+  flex-wrap: wrap;
+}
 
-  .project img {
-    width: 60px;
-    height: 60px;
-  }
+.project {
+  background: #161b22;
+  padding: 25px;
+  border-radius: 12px;
+  width: 300px;
+}
 
-  .project a {
-    color: #58a6ff;
-    text-decoration: none;
-    margin-right: 10px;
-  }
+.project img {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 15px;
+}
+
+.project h3 {
+  margin: 0 0 10px 0;
+}
+
+.project p {
+  margin: 8px 0;
+}
+
+.project a {
+  color: #58a6ff;
+  text-decoration: none;
+  margin-right: 10px;
+}
 </style>
 </head>
 <body>
@@ -45,26 +58,39 @@ in multiple blockchain testnets, focusing on stability and performance
 
   <h2>Experience</h2>
 <ul>
-  <li>Initia – Validator (Testnet)</li>
-  <h2>Projects</h2>
+ <h2>Projects</h2>
 
-<div class="project">
-  <img src="assets/initia.png" alt="Initia logo">
-  <div>
+<div class="projects-container">
+
+  <div class="project">
+    <img src="assets/initia.png" alt="Initia logo">
     <h3>Initia</h3>
     <p>
-      Participated as a validator in the Initia testnet, operating validator
-      infrastructure and monitoring network performance.
+      Participated as a validator in the Initia testnet,
+      operating validator infrastructure and monitoring performance.
     </p>
     <p>
-      <a href="https://initia.xyz" target="_blank">Website</a>
-      <a href="https://x.com/initia" target="_blank">X</a>
-      <a href="https://discord.gg/initia" target="_blank">Discord</a>
+      <a href="https://initia.xyz">Website</a>
+      <a href="https://x.com/initia">X</a>
+      <a href="https://discord.gg/initia">Discord</a>
     </p>
   </div>
+
+  <div class="project">
+    <img src="assets/dymension.png" alt="Dymension logo">
+    <h3>Dymension</h3>
+    <p>
+      Node operator for Dymension testnet,
+      running Rollapp Program - Fullnode and supporting network testing.
+    </p>
+    <p>
+      <a href="dymension.xyz">Website</a>
+      <a href="https://x.com/dymension">X</a>
+      <a href="https://discord.gg/dymension">Discord</a>
+    </p>
+  </div>
+
 </div>
-  
-  <li>Dymension – Node Operator (Testnet)</li>
   <li>Story Protocol Testnet Odyssey and Aenid</li>
   <li>Warden Protocol</li>
   <li>OG Labs</li>
