--- a/index.html
+++ b/index.html
@@ -2,49 +2,45 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Validator Portfolio<title>
+  <title>Validator Portfolio</title>
   <style>
   body {
     font-family: Arial, sans-serif;
-    background: #0d1117;
+    background-color: #0d1117;
     color: #e6edf3;
-    max-width: 900px;
+    max-width: 1100px;
     margin: auto;
     padding: 40px;
   }
 
+  h2 {
+    margin-top: 50px;
+  }
+
   .projects-container {
-  display: flex;
-  gap: 25px;
-  flex-wrap: wrap;
-}
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap;
+  }
 
-.project {
-  background: #161b22;
-  padding: 25px;
-  border-radius: 12px;
-  width: 300px;
-}
+  .project {
+    background: #161b22;
+    padding: 25px;
+    border-radius: 12px;
+    width: 300px;
+  }
 
-.project img {
-  width: 60px;
-  height: 60px;
-  margin-bottom: 15px;
-}
+  .project img {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 15px;
+  }
 
-.project h3 {
-  margin: 0 0 10px 0;
-}
-
-.project p {
-  margin: 8px 0;
-}
-
-.project a {
-  color: #58a6ff;
-  text-decoration: none;
-  margin-right: 10px;
-}
+  .project a {
+    color: #58a6ff;
+    text-decoration: none;
+    margin-right: 10px;
+  }
 </style>
 </head>
 <body>
