--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ in multiple blockchain testnets, focusing on stability and performance
       <a href="https://initia.xyz">Website</a>
       <a href="https://x.com/initia">X</a>
       <a href="https://discord.gg/initia">Discord</a>
+      <a href="https://x.com/cobersky/status/1804033513966178547?s=20">Proof</a>
     </p>
   </div>
 
@@ -83,11 +84,27 @@ in multiple blockchain testnets, focusing on stability and performance
       <a href="dymension.xyz">Website</a>
       <a href="https://x.com/dymension">X</a>
       <a href="https://discord.gg/dymension">Discord</a>
+      <a href="https://x.com/cobersky/status/1704071667767759225?s=20">Proof</a>
     </p>
   </div>
 
+<div class="project">
+    <img src="assets/story.png" alt="story logo">
+    <h3>Story Protocol</h3>
+    <p>
+      Validator testnet for Story Protocol,
+      running validator testnet odyssey and aenid for Story protocol.
+    </p>
+    <p>
+      <a href="https://www.story.foundation/">Website</a>
+      <a href="https://x.com/StoryProtocol">X</a>
+      <a href="https://discord.gg/storyprotocol">Discord</a>
+      <a href="https://x.com/cobersky/status/1856922264333422861?s=20">Proof Odyssey</a>
+      <a href="https://aeneid.staking.story.foundation/validators/0xdedd0312c083180ecd9251339ff2fe48fe5a1ce8">Proof Aenid</a>
+    </p>
+  </div>
+  
 </div>
-  <li>Story Protocol Testnet Odyssey and Aenid</li>
   <li>Warden Protocol</li>
   <li>OG Labs</li>
   <li>DILL Network</li>
