--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ in multiple blockchain testnets, focusing on stability and performance
       running Rollapp Program - Fullnode and supporting network testing.
     </p>
     <p>
-      <a href="dymension.xyz">Website</a>
+      <a href="https://dymension.xyz">Website</a>
       <a href="https://x.com/dymension">X</a>
       <a href="https://discord.gg/dymension">Discord</a>
       <a href="https://x.com/cobersky/status/1704071667767759225?s=20">Proof</a>
