--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ in multiple blockchain testnets, focusing on stability and performance
       operating validator infrastructure and monitoring performance.
     </p>
     <p>
-      <a href="https://initia.xyz">Website</a>
-      <a href="https://x.com/initia">X</a>
-      <a href="https://discord.gg/initia">Discord</a>
-      <a href="https://x.com/cobersky/status/1804033513966178547?s=20">Proof</a>
+      <a href="https://initia.xyz" target="_blank" rel="noopener noreferrer">Website</a>
+      <a href="https://x.com/initia" target="_blank" rel="noopener noreferrer">X</a>
+      <a href="https://discord.gg/initia" target="_blank" rel="noopener noreferrer">Discord</a>
+      <a href="https://x.com/cobersky/status/1804033513966178547?s=20" target="_blank" rel="noopener noreferrer">Proof</a>
     </p>
   </div>
 
@@ -128,10 +128,10 @@ in multiple blockchain testnets, focusing on stability and performance
       running Rollapp Program - Fullnode and supporting network testing.
     </p>
     <p>
-      <a href="https://dymension.xyz">Website</a>
-      <a href="https://x.com/dymension">X</a>
-      <a href="https://discord.gg/dymension">Discord</a>
-      <a href="https://x.com/cobersky/status/1704071667767759225?s=20">Proof</a>
+      <a href="https://dymension.xyz" target="_blank" rel="noopener noreferrer">Website</a>
+      <a href="https://x.com/dymension" target="_blank" rel="noopener noreferrer">X</a>
+      <a href="https://discord.gg/dymension" target="_blank" rel="noopener noreferrer">Discord</a>
+      <a href="https://x.com/cobersky/status/1704071667767759225?s=20" target="_blank" rel="noopener noreferrer">Proof</a>
     </p>
   </div>
 
@@ -143,11 +143,11 @@ in multiple blockchain testnets, focusing on stability and performance
       running validator testnet odyssey and aenid for Story protocol.
     </p>
     <p>
-      <a href="https://www.story.foundation/">Website</a>
-      <a href="https://x.com/StoryProtocol">X</a>
-      <a href="https://discord.gg/storyprotocol">Discord</a>
-      <a href="https://x.com/cobersky/status/1856922264333422861?s=20">Proof Odyssey</a>
-      <a href="https://aeneid.staking.story.foundation/validators/0xdedd0312c083180ecd9251339ff2fe48fe5a1ce8">Proof Aenid</a>
+      <a href="https://www.story.foundation/" target="_blank" rel="noopener noreferrer">Website</a>
+      <a href="https://x.com/StoryProtocol" target="_blank" rel="noopener noreferrer">X</a>
+      <a href="https://discord.gg/storyprotocol" target="_blank" rel="noopener noreferrer">Discord</a>
+      <a href="https://x.com/cobersky/status/1856922264333422861?s=20" target="_blank" rel="noopener noreferrer">Proof Odyssey</a>
+      <a href="https://aeneid.staking.story.foundation/validators/0xdedd0312c083180ecd9251339ff2fe48fe5a1ce8" target="_blank" rel="noopener noreferrer">Proof Aenid</a>
     </p>
   </div>
   
