--- a/index.html
+++ b/index.html
@@ -90,14 +90,10 @@
 
   <div class="header-text">
     <h1>dhozil</h1>
-    <p>Blockchain Validator & Node Operator</p>
+    <p>Blockchain Validator &  Node operator with hands-on experience running validator and full nodes
+in multiple blockchain testnets, focusing on stability and performance</p>
   </div>
 </div>
-
-  <p>
-    Node operator with hands-on experience running validator and full nodes
-in multiple blockchain testnets, focusing on stability and performance
-  </p>
 
   <h2>Experience</h2>
 <ul>
@@ -150,17 +146,65 @@ in multiple blockchain testnets, focusing on stability and performance
       <a href="https://aeneid.staking.story.foundation/validators/0xdedd0312c083180ecd9251339ff2fe48fe5a1ce8" target="_blank" rel="noopener noreferrer">Proof Aenid</a>
     </p>
   </div>
-  
-</div>
-  <li>Warden Protocol</li>
-  <li>OG Labs</li>
-  <li>DILL Network</li>
-</ul>
 
+   <div class="project">
+    <img src="assets/sei.png" alt="sei logo">
+    <h3>Sei Network</h3>
+    <p>
+      validator testnet program on Sei Network, there are several tasks for Validators and each task has points, starting from creating Validators, CLI transaction tasks, Relayers between Networks, etc.
+    </p>
+    <p>
+      <a href="www.sei.io/" target="_blank" rel="noopener noreferrer">Website</a>
+      <a href="https://x.com/SeiNetwork" target="_blank" rel="noopener noreferrer">X</a>
+      <a href="https://discord.com/invite/sei" target="_blank" rel="noopener noreferrer">Discord</a>
+      <a href="https://github.com/dhozil/dhozil.github.io/blob/main/assets/sei%20validator%20proof%20dhozil.png" target="_blank" rel="noopener noreferrer">Proof</a>
+    </p>
+  </div>
+  
+ <div class="project">
+    <img src="assets/0G.png" alt="0g logo">
+    <h3>0G Labs</h3>
+    <p>
+      validator testnet 0G Labs.
+    </p>
+    <p>
+      <a href="https://0g.ai/" target="_blank" rel="noopener noreferrer">Website</a>
+      <a href="https://x.com/0G_labs" target="_blank" rel="noopener noreferrer">X</a>
+      <a href="https://discord.com/invite/0glabs" target="_blank" rel="noopener noreferrer">Discord</a>
+    </p>
+  </div>
+
+   <div class="project">
+    <img src="assets/dill.png" alt="dill logo">
+    <h3>Dill Network</h3>
+    <p>
+      Running Full Validator node in the Dill Network for testing network performance.
+    </p>
+    <p>
+      <a href="https://0g.ai/" target="_blank" rel="noopener noreferrer">Website</a>
+      <a href="https://x.com/dill_xyz_" target="_blank" rel="noopener noreferrer">X</a>
+      <a href="https://discord.gg/CrQyHCtvKK" target="_blank" rel="noopener noreferrer">Discord</a>
+      <a href="https://alps.dill.xyz/validators?pubkey=85fe2437c3ee4d454cf579df495756a57019a05d7c5ca4ab286bdb7b4f7be10bb8f205e9484a4902f114ac8b364c64bf" target="_blank" rel="noopener noreferrer">Proof</a>
+    </p>
+  </div>
+
+   <div class="project">
+    <img src="assets/avail.png" alt="avail logo">
+    <h3>Avail</h3>
+    <p>
+     Participated Fullnode program that creates Rollups on avail and madara networks
+    </p>
+    <p>
+      <a href="https://availproject.org/" target="_blank" rel="noopener noreferrer">Website</a>
+      <a href="https://x.com/AvailProject" target="_blank" rel="noopener noreferrer">X</a>
+      <a href="https://discord.com/invite/AvailProject" target="_blank" rel="noopener noreferrer">Discord</a>
+    </p>
+  </div>
+  
   <h2>Contact</h2>
 <p>
-  Telegram: @dhozil<br>
-  X : https://x.com/cobersky
+   <a href="https://t.me/dhozil" target="_blank" rel="noopener noreferrer">Telegram</a>
+   <a href="https://x.com/cobersky" target="_blank" rel="noopener noreferrer">X</a>
 </p>
   
 </body>
