--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ in multiple blockchain testnets, focusing on stability and performance</p>
   </div>
   
  <div class="project">
-    <img src="assets/0G.png" alt="0g logo">
+    <img src="assets/0g.png" alt="0g logo">
     <h3>0G Labs</h3>
     <p>
       validator testnet 0G Labs.
