--- a/index.html
+++ b/index.html
@@ -200,14 +200,24 @@ in multiple blockchain testnets, focusing on stability and performance</p>
       <a href="https://discord.com/invite/AvailProject" target="_blank" rel="noopener noreferrer">Discord</a>
     </p>
   </div>
+</div>
 
 
-  
+<section class="projects">
   <h2>Contact</h2>
-<p>
+  <p>
    <a href="https://t.me/dhozil" target="_blank" rel="noopener noreferrer">Telegram</a>
    <a href="https://x.com/cobersky" target="_blank" rel="noopener noreferrer">X</a>
-</p>
+  </p>
+
+  .contact {
+    margin-top: 60px;
+    padding: 30px;
+    background: #161b22;
+    border-radius: 12px;
+    text-align: center;
+   }
+</section>
   
 </body>
 </html>
