--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ in multiple blockchain testnets, focusing on stability and performance</p>
     <img src="assets/sei.png" alt="sei logo">
     <h3>Sei Network</h3>
     <p>
-      validator testnet program on Sei Network, there are several tasks for Validators and each task has points, starting from creating Validators, CLI transaction tasks, Relayers between Networks, etc.
+      Validator testnet program on Sei Network, there are several tasks for Validators and each task has points, starting from creating Validators, CLI transaction tasks, Relayers between Networks, etc.
     </p>
     <p>
       <a href="www.sei.io/" target="_blank" rel="noopener noreferrer">Website</a>
@@ -173,7 +173,7 @@ in multiple blockchain testnets, focusing on stability and performance</p>
     <img src="assets/0g.png" alt="0g logo">
     <h3>0G Labs</h3>
     <p>
-      validator testnet 0G Labs.
+      Validator testnet 0G Labs.
     </p>
     <p>
       <a href="https://0g.ai/" target="_blank" rel="noopener noreferrer">Website</a>
