--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Validator Portfolio</title>
+  <title>DhoziL Validator</title>
+  <link rel="icon" type="image/png" href="dhozil.png">
+</head>
   <style>
   body {
     font-family: Arial, sans-serif;
