--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>DhoziL Validator</title>
-  <link rel="icon" type="image/png" href="dhozil.png">
+  <link rel="icon" href="dhozil.ico">
 </head>
   <style>
   body {
